--- a/.github/workflows/boss-csv.yml
+++ b/.github/workflows/boss-csv.yml
@@ -7,11 +7,8 @@ jobs:
   boss-csv:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout repo content
-        uses: actions/checkout@v2
-      - name: setup python
-        uses: actions/setup-python@v2
-        with:
-        python-version: 3.8
-      - name: run script
-        run: python boss-csv.py
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+    - run: python boss_csv.py
