--- a/.github/workflows/boss-csv.yml
+++ b/.github/workflows/boss-csv.yml
@@ -10,5 +10,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
-    - run: python boss_csv.py
+        python-version: '3.9'
+        cache: 'pip'
+    - run: pip install -r boss-csv/requirements.txt
+    - run: python boss-csv/boss_csv.py
